# mnistclassifier

./: README.md  model.md  pyproject.toml
mnistclassifier/: __init__.py  datas.py  demo.py  model-lightning.py  model-linear.py  model.py  train.py  views.py
notebooks/: MNIST-classifier-module.ipynb  MNIST-lightning.ipynb  MNIST-pytorch-archive.ipynb  MNIST-pytorch.ipynb  mnist_lightning_model.ckpt  model-basic.ipynb  model-complexe-basic.ipynb  model-lightning-Copy1.ipynb
stock/: model-lightning.py  model-linear.py
