[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnistclassifier"
version = "0.0.1"
authors = [
  { name="Emmanuel Braux", email="emmanuel.braux@imt-atlantique.fr" },
]
description = "A Model example package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]

#[project.urls]
#Homepage = "https://github.com/pypa/sampleproject"
#Issues = "https://github.com/pypa/sampleproject/issues"

#[project.scripts]
#train-mnist-classifier = "mnistclassifier.src.train:train"
